--- a/backend/web/static/css/my.style.css
+++ b/backend/web/static/css/my.style.css
@@ -2,3 +2,8 @@ div.required label.control-label:after {
     content: " *";
     color: red;
 }
+.btn-primary {
+    background-color: #1ab394 !important;
+    border-color: #1ab394 !important;
+    color: #FFF !important;
+}
