今日完成内容管理+友情链接+日志

--- a/backend/web/static/css/my.style.css
+++ b/backend/web/static/css/my.style.css
@@ -7,3 +7,7 @@ div.required label.control-label:after {
     border-color: #1ab394 !important;
     color: #FFF !important;
 }
+img.img-center-block {
+	display: block;
+	margin: 0 auto;
+}
