--- a/frontend/web/static/css/templatemo-style.css
+++ b/frontend/web/static/css/templatemo-style.css
@@ -525,3 +525,7 @@ body.page-2 { padding-top: 80px; }
 	font-size:14px;
 	cursor: pointer;
 }
+div.required label.control-label:after {
+    content: " *";
+    color: red;
+}
