--- a/backend/web/static/css/my.style.css
+++ b/backend/web/static/css/my.style.css
@@ -11,3 +11,25 @@ img.img-center-block {
 	display: block;
 	margin: 0 auto;
 }
+.tt-dropdown-menu, .tt-menu {
+    width: 350px;
+    margin-top: 2px;
+    padding: 8px 0;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+    -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+}
+.typeahead:focus {
+    border: 2px solid #0097cf;
+}
+.tt-dropdown-menu, .tt-menu div.tt-suggestion, div.tt-selectable {
+    cursor: pointer;
+    padding:5px;
+    border-bottom: 1px dashed #999;
+} 
+.tt-dropdown-menu, .tt-menu div.tt-selectable:hover {
+    background: #0097cf;
+}
