--- a/frontend/web/static/template1/css/index.css
+++ b/frontend/web/static/template1/css/index.css
@@ -221,4 +221,9 @@ a.readmore { background: #fd8a61; color: #fff; padding: 5px 10px; float: right; 
 .website { margin: 10px 0; background: #F3F3F3; border-radius: 50%; text-align: center; }
 .website li { line-height: 26px; text-shadow: #fff 1px 1px 1px; height: 26px; }
 .weixin { background: url(../images/weixin.jpg) no-repeat; width: 100%; display: inline-block; height: 274px; overflow: hidden; margin: 10px 0; clear: both }
+@media screen and (max-width: 1350px) {
+	.dateview {
+		background-position: 7px center !important;
+	}
+}
 
