--- a/frontend/web/static/template1/css/base.css
+++ b/frontend/web/static/template1/css/base.css
@@ -1,7 +1,7 @@
 
 /* CSS Document */
 * { margin: 0; padding: 0 }
-body { font: 12px "宋体", Arial, Helvetica, sans-serif; color: #756F71 }
+body { font: 12px "Microsoft YaHei", Arial, Helvetica, sans-serif; color: #756F71;background: #E9EAED; }
 img { border: 0; display: block }
 ul { list-style: none; }
 a:link, a:visited {text-decoration: none; color: #333;}
@@ -9,16 +9,62 @@ a:link, a:visited {text-decoration: none; color: #333;}
 .right { float: right; }
 .blank { height: 5px; overflow: hidden; width: 100%; margin: auto; clear: both }
 .box{ width:1000px; margin:auto; overflow:hidden}
-header { width: 1000px; margin: auto; height: 80px; position: relative; overflow: hidden }
-#logo a { width: 260px; height: 60px; margin: 10px 0 0 0; position: absolute; background: url(../images/logo.jpg) no-repeat; display: block }
-nav { float: right; width: 100%; margin: 30px 0 0 0; text-align: right }
+header { width: 100%; margin: auto; height: 80px;background: #1C2327; }
+.navbox{width: 1200px;margin: auto;}
+.logo {float:left;margin-right: 60px;line-height: 56px;}
+.logo a { width: 260px; height: 60px; margin: 10px 0 0 0;background: url(../images/logo.jpg) no-repeat; display: block }
+nav { float: left; margin: 30px 0 0 30px; }
 nav a { position: relative; display: inline-block; font-size: 18px; font-family: "微软雅黑", Arial, Helvetica, sans-serif; }
 nav a:hover { text-decoration: none }
-.topnav ul > li {display: inline;}
-.topnav a { margin: 0 5px; padding: 0 8px; }
+.topnav ul > li {
+    display: inline;
+    position: relative;
+    float: left;
+    width: max-content;
+    padding: 0 10px;
+}
+.topnav ul.sub {
+    overflow: hidden;
+    position: absolute;
+    left: 0;
+    top: 29px;
+    background: #1C2327;
+    display: none;
+    z-index: 9;
+}
+.topnav ul.sub li {
+    height: 30px;
+    line-height: 30px;
+    font-size: 14px;
+}
+.topnav li.menu {
+    position: relative;
+}
+.topnav li.menu:before {
+    position: absolute;
+    content: "";
+    top: 11px;
+    right: 13px;
+    background: url(../images/jt.png) no-repeat;
+    width: 8px;
+    height: 8px;
+    -ms-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+    -webkit-transition: all .5s ease;
+    -o-transition: all .5s ease;
+    transition: all .5s ease;
+}
+.topnav li.menu:hover:before{
+    transform: rotate(180deg);
+}
+.topnav li.menu:hover ul.sub, .topnav li.menu:active ul.sub{
+    display: block;
+}
+.topnav a { color:#fff;margin: 0 5px; padding: 0 8px; }
 .topnav a span:first-child { z-index: 2; display: block; }
 .topnav a span:last-child { z-index: 1; display: block; color: #999; font: 12px Georgia, serif; opacity: 0; -webkit-transition: -webkit-transform 0.3s, opacity 0.3s; -moz-transition: -moz-transform 0.3s, opacity 0.3s; transition: transform 0.3s, opacity 0.3s; -webkit-transform: translateY(-100%); -moz-transform: translateY(-100%); transform: translateY(-100%); text-align: center }
-.topnav a:hover span:last-child, .topnav a:focus span:last-child { opacity: 1; -webkit-transform: translateY(0%); -moz-transform: translateY(0%); transform: translateY(0%); }
+.topnav a:hover {color: #00c1de;}
+/*.topnav a:hover span:last-child, .topnav a:focus span:last-child { opacity: 1; -webkit-transform: translateY(0%); -moz-transform: translateY(0%); transform: translateY(0%); }*/
 #topnav_current { color: #e15782; }
 .topnav_current { color: #e15782; }
 .en { color: #999; font-size: 12px; z-index: 1; display: block; }/* ie */
@@ -46,5 +92,7 @@ footer { text-align: center; line-height: 40px; border-top: #E8E8E8 1px solid ; 
 .rollto .fa {
 	width: auto !important;
 }
-
+.infos {
+    overflow-x: auto;
+}
 
