前端详情页 终于选好评论框，剩下的就是写评论相关的业务

--- a/frontend/web/static/template1/css/base.css
+++ b/frontend/web/static/template1/css/base.css
@@ -2,8 +2,9 @@
 /* CSS Document */
 * { margin: 0; padding: 0 }
 body { font: 12px "Microsoft YaHei", Arial, Helvetica, sans-serif; color: #756F71;background: #E9EAED; }
-img { border: 0; display: block }
+img { border: 0; display: block;max-width: 100%;height: auto;vertical-align: middle }
 ul { list-style: none; }
+.clearfix {clear: both}
 a:link, a:visited {text-decoration: none; color: #333;}
 .left { float: left; }
 .right { float: right; }
@@ -95,4 +96,311 @@ footer { text-align: center; line-height: 40px; border-top: #E8E8E8 1px solid ; 
 .infos {
     overflow-x: auto;
 }
+/*----------评论区域 begin----------*/
+.flex-text-wrap {
+    width: 100%;
+    position: relative;
+    *zoom: 1;
+}
 
+textarea,
+.flex-text-wrap {
+    outline: 0;
+    margin: 0;
+    border: none;
+    padding: 0;
+    *padding-bottom: 0!important;
+}
+.flex-text-wrap textarea,
+.flex-text-wrap pre {
+    *white-space: pre;
+    *word-wrap: break-word;
+    white-space: pre-wrap;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.flex-text-wrap textarea {
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    /*resize: none;*/
+    /* IE7 box-sizing fudge factor */
+    *height: 94%;
+    *width: 94%;
+}
+.flex-text-wrap pre {
+    display: block;
+    visibility: hidden;
+}
+.reviewArea {
+    padding: 20px 20px 5px 20px;
+}
+.com-box {
+    overflow: hidden;
+}
+pre {
+    white-space: pre;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+.comment-input {
+    min-height: 30px;
+}
+textarea, .flex-text-wrap pre {
+    margin-bottom: 25px;
+    line-height: 1.7;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 100%;
+    padding: 10px 15px;
+    border: 1px solid #c6c8ce;
+    width: 100%;
+    -webkit-appearance: none;
+    background: #fff;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    -webkit-box-shadow: 0 0 8px rgba(182, 195, 214, .6) inset, 0 1px 1px #fff;
+    -moz-box-shadow: 0 0 8px rgba(182, 195, 214, .6) inset, 0 1px 1px #fff;
+    box-shadow: 0 0 8px rgba(182, 195, 214, .6) inset, 0 1px 1px #fff;
+    -webkit-transition-duration: 300ms;
+    -moz-transition-duration: 300ms;
+    -o-transition-duration: 300ms;
+    -ms-transition-duration: 300ms;
+    transition-duration: 300ms;
+    -webkit-transition-easing: ease-in-out;
+    -moz-transition-easing: ease-in-out;
+    -o-transition-easing: ease-in-out;
+    -ms-transition-easing: ease-in-out;
+    transition-easing: ease-in-out;
+    -webkit-transition-property: border-color, -webkit-box-shadow;
+    -webkit-transition-property: border-color, box-shadow;
+    -moz-transition-property: border-color, -moz-box-shadow;
+    -moz-transition-property: border-color, box-shadow;
+    -o-transition-property: border-color, box-shadow;
+    -ms-transition-property: border-color, box-shadow;
+    transition-property: border-color, box-shadow;
+}
+.fork-link {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 140px;
+}
+@media only screen and (-webkit-min-device-pixel-ratio:1.25), (min-resolution:120dpi) {
+    html {
+        background-size: 51px auto;
+    }
+}
+.comment-content{float: left;}
+.flex-text-wrap,pre{margin: 0 !important;}
+.commentAll{padding: 10px 0px;margin: 10px auto;}
+.plBtn {
+    display: inline-block;
+    padding: 0 15px;
+    margin-bottom: 0;
+    line-height: 20px;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    border: 0;
+    border-radius: 0;
+    font-family: "Microsoft Yahei","Helvetica Neue",Helvetica,Arial,sans-serif;
+    float: right;
+    color: #fff;
+    background-color: #5fbaac;
+    height: 36px;
+}
+.plBtn:hover{color: #fff;background-color: #35d2ab;}
+.comt-tips {
+    text-align: right;
+    line-height: 30px;
+    margin-right: 10px;
+    color: #999;
+}
+.comt-title {
+    overflow: hidden;
+    padding: 12px 20px;
+}
+.comt-avatar {
+    height: 28px !important;
+    width: 28px;
+}
+.comt-avatar img {
+    border-radius: 2px;
+    opacity: .9;
+    height: 28px !important;
+    width: 28px !important;
+}
+
+.comt-smilie{
+    font-size: 15px;
+    height: 36px;
+    cursor: pointer;
+    margin-top: 2px;
+    display: inline-block;
+}
+.comt-author {
+    margin: 5px 10px 0 10px;
+    font-size: 16px;
+    color: #666;
+}
+.switch-author {
+    color: #09a8c5 !important;
+}
+.switch-author:hover, .switch-author:focus {
+    color: #007046 !important;
+}
+#cancel-comment-reply-link {
+    display: none;
+    color: #bbb;
+    margin: -12px -20px;
+    line-height: 28px;
+    font-size: 14px;
+    padding: 12px 20px;
+}
+.comment-show{margin-top: 20px;}
+.comment-show-con {
+    width: 100%;
+    border-top: 1px solid #EDEDED;
+    padding: 10px 0;
+}
+.comment-show-con-img {
+    width: 48px;
+    height: 48px;
+    overflow: hidden;
+    margin-top: 5px;
+}
+.comment-show-con-list {
+    width: 85%;
+    margin-left: 3%;
+}
+.pl-text {
+    width: 100%;
+    margin-top: 7px;
+    word-wrap: break-word;
+    overflow: hidden;
+}
+.date-dz {
+    width: 100%;
+    float: left;
+}
+.hf-list-con {
+    float: left;
+    width: 100%;
+    background-color: #eaeaec;
+    margin-top: 7px;
+}
+.comment-size-name {
+    font-size: 12px;
+    color: #339b53;
+}
+.my-pl-con {
+    font-size: 12px;
+    color: #8b8b8b;
+    width: 100%;
+}
+.date-dz-left {
+    font-size: 12px;
+    color: #8b8b8b;
+    display: block;
+    padding-top: 18px;
+}
+.comment-time, .comment-pl-block {
+    padding-top: 7px;
+}
+.comment-pl-block {
+    margin-top: 0;
+}
+.date-dz-right {
+    display: block;
+    padding-top: 6px;
+    padding-right: 18px;
+    position: relative;
+    overflow: hidden;
+}
+.removeBlock {
+    float: left;
+    font-size: 12px;
+    color: #8b8b8b;
+    margin-right: 24px;
+    display: block;
+    opacity: 0;
+}
+.hf-con-block {
+    display: block;
+}
+.date-dz-pl, .date-dz-line, .date-dz-z {
+    font-size: 12px;
+    color: #8b8b8b;
+}
+.date-dz-line {
+    display: block;
+    padding: 0 20px;
+}
+.date-dz-z-click-red {
+    width: 17px;
+    height: 17px;
+    display: block;
+    float: left;
+    background-image: url(../images/icon-all_01.png);
+    background-repeat: no-repeat;
+    background-position: -6px -198px;
+    margin-right: 5px;
+}
+.z-num {
+    font-style: normal;
+}
+.date-dz-z-click {
+    color: #b83b44;
+}
+.red {
+    background-position: -6px -119px !important;
+}
+.hf-pl {
+    width: 70px;
+    height: 30px;
+    line-height: 30px;
+    background-color: #339b53;
+    text-align: center;
+    display: block;
+    float: right;
+    color: #FFFFFF;
+    font-size: 12px;
+    border-radius: 6px;
+    margin-right: 2px;
+    margin-top: 20px;
+}
+.hf-con{width: 100%;margin-top: 24px;}
+.hf-input{font-size: 12px;}
+.all-pl-con {
+    width: 96%;
+    padding: 2% 0;
+    float: left;
+    margin: 0 2%;
+}
+.atName {
+    font-size: 12px;
+    color: #339b53;
+}
+.hfpl-text{margin-top: 0;}
+.date-dz:hover .removeBlock {
+    opacity: 1;
+}
+.hf-list-con .all-pl-con {
+    border-top: 1px solid #d9d9d9;
+    padding-bottom: 12px;
+}
+.hf-list-con .all-pl-con:first-child {
+    border-top: 0;
+}
+/*----------评论区域 end----------*/
