--- a/frontend/web/static/template1/css/base.css
+++ b/frontend/web/static/template1/css/base.css
@@ -403,3 +403,245 @@ pre {
     border-top: 0;
 }
 /*----------评论区域 end----------*/
+/*----------login modal start------- */
+.btn-block {
+    display: block;
+    width: 100%;
+}
+.btn {
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    background: #5ecfba;
+    border-color: #5ecfba;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+.btn.active, .btn:active {
+    background-image: none;
+    outline: 0;
+    -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+    box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+}
+.btn.focus, .btn:focus, .btn:hover {
+    text-decoration: none;
+}
+.modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1050;
+    display: none;
+    overflow: hidden;
+    -webkit-overflow-scrolling: touch;
+    outline: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+.modal-backdrop {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1040;
+    background-color: #000;
+}
+.fade {
+    opacity: 0;
+    -webkit-transition: opacity .15s linear;
+    -o-transition: opacity .15s linear;
+    transition: opacity .15s linear;
+}
+.fade.in {
+    opacity: 1;
+}
+.modal-backdrop.fade {
+    filter: alpha(opacity=0);
+    opacity: 0 !important;
+}
+.modal-backdrop.in {
+    filter: alpha(opacity=50);
+    opacity: .5 !important;
+}
+.modal.in .modal-dialog {
+    -webkit-transform: translate(0,0);
+    -ms-transform: translate(0,0);
+    -o-transform: translate(0,0);
+    transform: translate(0,0);
+}
+.modal.fade .modal-dialog {
+    -webkit-transition: -webkit-transform .3s ease-out;
+    -o-transition: -o-transform .3s ease-out;
+    transition: transform .3s ease-out;
+    -webkit-transform: translate(0,-25%);
+    -ms-transform: translate(0,-25%);
+    -o-transform: translate(0,-25%);
+    transform: translate(0,-25%);
+}
+.modal-dialog {
+    position: relative;
+    width: auto;
+    margin: 10px;
+}
+.modal-header {
+    min-height: 16.43px;
+    padding: 15px;
+    border-bottom: 1px solid #e5e5e5;
+}
+.modal-header .close {
+    margin-top: -2px;
+}
+button.close {
+    -webkit-appearance: none;
+    padding: 0;
+    cursor: pointer;
+    background: 0 0;
+    border: 0;
+}
+.close {
+    float: right;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    filter: alpha(opacity=20);
+    opacity: .2;
+}
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
+}
+.form-control {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+.form-control:focus {
+    border-color: #1bbc9b;
+    outline: 0;
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(27, 188, 155, 0.6);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(27, 188, 155, 0.6);
+}
+.modal-title {
+    margin: 0;
+    line-height: 1.42857143;
+}
+.modal-content {
+    position: relative;
+    background-color: #fff;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 1px solid #999;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: 6px;
+    outline: 0;
+    -webkit-box-shadow: 0 3px 9px rgba(0,0,0,.5);
+    box-shadow: 0 3px 9px rgba(0,0,0,.5);
+}
+@media (min-width: 768px) {
+    .modal-sm {
+        width: 300px;
+    }
+    .modal-dialog {
+        width: 600px;
+        margin: 30px auto;
+    }
+    .modal-content {
+        -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.5);
+        box-shadow: 0 5px 15px rgba(0,0,0,.5);
+    }
+}
+.marginB10 {
+    margin-bottom: 10px;
+}
+#loginModal .modal-content{border-radius:0}
+#loginModal .col-left{width:225px;height:319px;background:url(../images/sprite_0.png) 0 -717px no-repeat;float:left;}
+#loginModal .col-right{width:313px;height:319px;color:#b2b2b2;float:left;}
+#loginModal .form-group{margin-bottom:10px}
+#loginModal .modal-body{height:263px}
+#loginModal #btnRegister{color:#ff9600}
+#loginModal .tips-error{padding:2px 10px;margin-top:10px;display:none}
+#loginModal .globalLogin{height:47px;background:#01c26f;color:#fff;font-size:14px;background:-webkit-linear-gradient(#1fd783,#1fd06b);background:-o-linear-gradient(#1fd783,#1fd06b);background:-moz-linear-gradient(#1fd783,#1fd06b);background:linear-gradient(#1fd783,#1fd06b)}
+#loginModal .threeLogin{position:absolute;bottom:15px}
+#loginModal .threeLogin span{color:#b3c3c0;float:left;font-size:14px}
+#loginModal .threeLogin a{display:inline-block;width:20px;height:20px;background:url(../images/login_img.png) no-repeat;vertical-align:middle;margin-left:15px;cursor:pointer}
+#loginModal .threeLogin .nqq{background-position:0 0}
+#loginModal .threeLogin .nqq:hover{background-position:0 -20px}
+#loginModal .threeLogin .nwx{background-position:-20px 0}
+#loginModal .threeLogin .nwx:hover{background-position:-20px -20px}
+#loginModal .threeLogin .nwb{background-position:-40px 0}
+#loginModal .threeLogin .nwb:hover{background-position:-40px -20px}
+.v5-input-txt{padding:0 15px 10px}
+.v5-input-txt .form-control{height:22px;line-height:normal;padding-bottom:10px;padding-top:10px;width: 90%;}
+.v5-input-txt #id_mobile_code_f,.v5-input-txt .send-verify{float:left}
+.v5-input-txt #id_mobile_code_f{width:170px;border-radius:0;margin-right:24px}
+.v5-input-txt .send-verify{width:144px;height:42px;line-height:30px;background:#5ecfb5;color:#fff;text-align:center;padding:0;cursor:pointer;border:0}
+.v5-input-txt .btn{padding-bottom:8px;padding-top:8px}
+.btn{background:#5ecfba;border-color:#5ecfba;color:#fff}
+.btn-micv5{background-color:#5ecfba;color:#fff;padding:8px 12px}
+.modal-header{color:#5ecfba}
+.tips-box{width:100%;display:inline-block;position:relative}
+.tips{position:absolute;left:0;top:-40px;color:#fff;font-size:12px;line-height:32px;background-color:#ff9600;border-radius:100px;padding:0 15px;box-sizing:border-box}
+.tips:after{content:'';position:absolute;bottom:-12px;left:25px;border-top:6px solid #ff9600;border-right:4px solid transparent;border-bottom:6px solid transparent;border-left:4px solid transparent}
+.zy_email{text-align:center;color:#5f5f5f}
+.zy_email p{padding:0 35px}
+.zy_email p.i{padding:40px 0 30px}
+.zy_email p.i img{vertical-align:top}
+.zy_email p.a{padding:30px 0;text-align:center}
+.zy_email p.a > a{display:inline-block;width:148px;height:34px;line-height:34px;text-align:center;color:#fff;background:#5ecfbb;border:1px solid #68c8b6;border-radius:2px}
+.zy_email p.a > a:hover{opacity:.7}
+.zy_success{margin-bottom:20px}
+.zy_success img{vertical-align:middle;margin-right:10px}
+.sendE{margin-bottom:20px}
+.sendE a{text-decoration:underline;cursor:pointer}
+.sendE2{margin-bottom:20px}
+.jspContainer{overflow:hidden;position:relative}
+.jspVerticalBar{opacity:0;transition:.3s;position:absolute;top:0;right:2px;width:8px;height:100%;z-index:20}
+.jspDrag{background:#1abc9c;position:relative;top:0;left:0;cursor:pointer;-moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px}
+.jspPane{position:absolute}
+.CLEARFIX,#loginModal .modal-content:before,#loginModal .modal-content:after,.v5-footer-links:before,.v5-footer-links:after{content:'';display:table;clear:both}
+.substr{text-overflow:ellipsis;-o-text-overflow:ellipsis;white-space:nowrap;overflow:hidden}
+.word-break{word-break:break-all;word-wrap:break-word}
+.transition{-webkit-transition:all .3s ease-out 0s;-moz-transition:all .3s ease-out 0s;-o-transition:all .3s ease-out 0s;transition:all .3s ease-out 0s}
+.W1160{width:1160px;margin:0 auto}
+.col_left,.index .media_reports .col_right{background-color:#fff}
+
+/*----------login modal end------- */
