--- a/frontend/web/static/common/css/comment.css
+++ b/frontend/web/static/common/css/comment.css
@@ -84,6 +84,17 @@
 	height: 30px;
 	float: right;
 }
+.operator-box-btn .colse-icon {
+	display: block;
+	float: left;
+	margin-top: -11px;
+	margin-left: 10px;
+	font-family: '微软雅黑';
+	font-size: 33px;
+	font-weight: lighter;
+	color: #99cc66;
+	cursor: pointer;
+}
 .comment_content .tools-box .submit-btn input[type='button'], .comment_content .tools-box .submit-btn button {
 	width: 100%;
 	height: 100%;
