--- a/frontend/web/static/template1/css/base.css
+++ b/frontend/web/static/template1/css/base.css
@@ -1,4 +1,4 @@
-
+`
 /* CSS Document */
 * { margin: 0; padding: 0 }
 body { font: 12px "Microsoft YaHei", Arial, Helvetica, sans-serif; color: #756F71;background: #E9EAED; }
@@ -539,7 +539,7 @@ button.close {
 .form-control {
     display: block;
     width: 100%;
-    height: 34px;
+    height: 22px;
     padding: 6px 12px;
     font-size: 14px;
     line-height: 1.42857143;
@@ -610,7 +610,7 @@ button.close {
 #loginModal .threeLogin .nwb{background-position:-40px 0}
 #loginModal .threeLogin .nwb:hover{background-position:-40px -20px}
 .v5-input-txt{padding:0 15px 10px}
-.v5-input-txt .form-control{height:22px;line-height:normal;padding-bottom:10px;padding-top:10px;width: 90%;}
+.v5-input-txt .form-control{line-height:normal;padding-bottom:10px;padding-top:10px;width: 90%;}
 .v5-input-txt #id_mobile_code_f,.v5-input-txt .send-verify{float:left}
 .v5-input-txt #id_mobile_code_f{width:170px;border-radius:0;margin-right:24px}
 .v5-input-txt .send-verify{width:144px;height:42px;line-height:30px;background:#5ecfb5;color:#fff;text-align:center;padding:0;cursor:pointer;border:0}
