--- a/frontend/web/static/template1/css/index.css
+++ b/frontend/web/static/template1/css/index.css
@@ -1,5 +1,5 @@
 
-.banner { background: url(../images/banner.jpg) top center; height: 265px; overflow: hidden }
+.banner { background: url(../images/banner.jpg) top center; height: 265px; }
 .texts { width: 350px; line-height: 26px; margin: 60px 0 0 20px; float: left; font-size: 14px; }
 .texts p { -webkit-transform: translate(60px); -moz-transform: translate(60px); -o-transform: translate(60px); -ms-transform: translate(60px); transform: translate(60px); text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.8), 2px 2px 3px rgba(180, 151, 151, 0.3); }
 .texts p:nth-child(1) { -webkit-animation: animations 3s ease-out 1s backwards; -moz-animation: animations 3s ease-out 1s backwards; -o-animation: animations 3s ease-out 1s backwards; -ms-animation: animations 3s ease-out 1s backwards; animation: animations 3s ease-out 1s backwards; }
