修改 文章详情页 的http cache 为 片段缓存；补全头像设定的js

--- a/frontend/web/static/template1/css/base.css
+++ b/frontend/web/static/template1/css/base.css
@@ -260,7 +260,7 @@ pre {
     font-size: 16px;
     color: #666;
 }
-.switch-author {
+.switch-author, .author {
     color: #09a8c5 !important;
 }
 .switch-author:hover, .switch-author:focus {
