--- a/frontend/web/static/template1/css/index.css
+++ b/frontend/web/static/template1/css/index.css
@@ -200,7 +200,7 @@ h2.title_tj p { background: #fff; width: 90px }
 .bloglist h3 { margin: 20px 0 10px 0; color: #333 }
 .bloglist figure { float: left; width: 183px; }
 .bloglist figure img { padding: 4px; border: #f4f2f2 1px solid; width: 175px; }
-.bloglist ul { float: left; width: 520px; margin: 10px 0px 0 15px; line-height: 20px; }
+.bloglist div.sub_title { float: left; width: 250px; margin: 10px 0px 0 15px; overflow:hidden;line-height: 20px; }
 .dateview { width: 695px; overflow: hidden; clear: both; margin: 10px 0 0 0; display: inline-block; background: #f6f6f6 url(../images/time.jpg) 15px center no-repeat; line-height: 26px; height: 26px; color: #838383; padding-left: 25px }
 .dateview span { margin: 0 10px; }
 .dateview span a { color: #099B43; }
