--- a/frontend/web/static/template1/css/new.css
+++ b/frontend/web/static/template1/css/new.css
@@ -15,6 +15,7 @@ ul.infos { overflow: hidden; margin: 20px 30px 20px 0; line-height: 28px; font-s
 ul.infos p { margin-bottom: 20px }
 ul.infos p img { display: block; margin: auto }
 .keybq { background: url(../images/6264.png) no-repeat 10px center #F8F8F8; line-height: 30px; height: 30px; padding-left: 40px; border: 1px solid #F0F0F0; margin-right: 20px; }
+.keybq p {margin:0px;}
 .keybq span { color: #099 }
 .nextinfo { line-height: 24px; }
 .otherlink h2 { border-bottom: #099 2px solid; line-height: 40px; font-size: 12px; font-weight: normal; margin-right: 20px; background:url(../images/5794.png) 10px center no-repeat; padding-left:40px}
