--- a/backend/web/static/css/my.style.css
+++ b/backend/web/static/css/my.style.css
@@ -48,3 +48,15 @@ img.img-center-block {
     height: 200px !important;
     max-height: 200px !important;
 }
+.multi-img-details {
+    max-width: 800px;
+    max-height: 500px;
+    overflow: scroll;   
+}
+.multi-img-details .multi-item {
+    margin: 5px 0;
+}
+.multi-img-details .multi-item img {
+    width: 100%;
+    height: 120px;
+}
