--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -2,3 +2,58 @@
 .tab {
   position: relative;
 }
+
+.article-lists {}
+
+.article-lists .article-detail {
+  overflow: hidden;
+  margin: 20rpx;
+  background: #fff;
+  border-radius: 8rpx;
+}
+
+.article-lists .article-detail .article-content {
+  position: relative;
+  color: #333;
+
+}
+
+.article-lists .article-detail .article-content .article-imgitem {
+  flex: none;
+  width: 100%;
+  height: 300rpx;
+  overflow: hidden;
+  display: block;
+}
+
+.article-title {
+  display: -webkit-box;
+  margin: 10rpx 20rpx 0;
+  font-size: 34rpx;
+  color: #333;
+  white-space: pre-wrap;
+  word-break: break-word;
+
+}
+
+.article-bottom {
+  position: absolute;
+  top: 244rpx;
+  width: 100%;
+  display: flex;
+  margin: 10rpx 0 0;
+  padding: 0 20rpx;
+  color: #fff;
+  line-height: 2;
+  background: rgba(0, 0, 0, 0.2);
+
+}
+
+.article-detail {
+  padding: 10rpx 20rpx 20rpx;
+  font-size: 28rpx;
+  color: #999;
+  z-index: 3;
+  line-height: 1.5;
+
+}
